exemplo-completo/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nginx-ratelimit
spec:
  rateLimit:
    average: 5
    period: 1s
