exemplo-completo/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: app-ingressroute
spec:
  entryPoints:
    - web
  routes:
<<<<<<< HEAD:exemplo/ingress.yaml
  - kind: Rule
    match: Host(`k8s.unicoob.local`)
    middlewares:
      - name: app-ratelimit
    services:
    - name: nginx-service
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: app-ingressroute-tls
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`k8s.unicoob.local`)
    middlewares:
      - name: app-ratelimit
    services:
    - name: nginx-service
      port: 80
  tls:
    secretName: k8sunicoob-secret
=======
    - match: Host(`exemplo.local`)
      kind: Rule
      services:
      - name: nginx-service
        port: 8080
      middlewares:
        - name: app-ratelimit
>>>>>>> 52d6d32fdef6daa44fafdcee4f336201f90ca03f:exemplo-completo/ingress.yaml
